force-app/main/default/objects/Account/fields/Date_Time_analyze__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_analyze__c</fullName>
    <label>Date Time analyze</label>
    <type>DateTime</type>
</CustomField>