force-app/main/default/objects/Account/fields/Hello__c.field-meta.xml
<CustomField>
    <fullName>Hello__c</fullName>
    <label>Hello</label>
    <length>50</length>
    <type>Text</type>
</CustomField>