force-app/main/default/objects/Account/fields/Outstanding_payments__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_payments__c</fullName>
    <description>outstanding payments represent the unpaid balance on an invoice.</description>
    <label>Outstanding payments</label>
    <summarizedField>Invoice__c.Amount_Due__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Not Paid</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>