force-app/main/default/objects/Account/fields/Total_sales_revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_sales_revenue__c</fullName>
    <description>Sum of the Amount field for all related Opportunities.</description>
    <label>Total sales revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>