force-app/main/default/objects/Account/validationRules/Account_no.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_no</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(AccountNumber)</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>Account number is not present.</errorMessage>
</ValidationRule>