force-app/main/default/objects/Account/validationRules/Test_Number_not_greater_than_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Number_not_greater_than_1</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()&amp;&amp; Test_Number__c &gt;1</errorConditionFormula>
    <errorDisplayField>Test_Number__c</errorDisplayField>
    <errorMessage>Value should be less than 1 on creating new record.</errorMessage>
</ValidationRule>